--- a/index.html
+++ b/index.html
@@ -2,9 +2,188 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <title>Hello, world!</title>
+    <title>Avalin | Creative Technologist</title>
+    <style>
+      html, body {
+        margin: 0;
+        padding: 0;
+        height: 100%;
+        font-family: 'Segoe UI', sans-serif;
+        background: radial-gradient(ellipse at top, #0e0e0e 0%, #000000 100%);
+        color: white;
+        overflow-x: hidden;
+        scroll-behavior: smooth;
+      }
+
+      body {
+        overflow-y: auto;
+      }
+
+      canvas {
+        position: fixed;
+        top: 0;
+        left: 0;
+        z-index: 0;
+        pointer-events: none;
+      }
+
+      #content {
+        position: relative;
+        z-index: 1;
+        text-align: center;
+        padding: 10vh 2rem 5vh;
+      }
+
+      h1 {
+        font-size: 3.5rem;
+        margin: 0;
+        background: linear-gradient(to right, #0ff, #ff0);
+        -webkit-background-clip: text;
+        -webkit-text-fill-color: transparent;
+      }
+
+      p.tagline {
+        font-size: 1.3rem;
+        color: #ccc;
+        margin-bottom: 4rem;
+      }
+
+      section {
+        padding: 4rem 2rem;
+        max-width: 1100px;
+        margin: 0 auto;
+        position: relative;
+        z-index: 1;
+      }
+
+      .project-grid {
+        display: grid;
+        grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
+        gap: 2rem;
+      }
+
+      .project-card {
+        background: rgba(255, 255, 255, 0.05);
+        border: 1px solid rgba(255, 255, 255, 0.1);
+        padding: 1.5rem;
+        border-radius: 16px;
+        transition: transform 0.3s ease, box-shadow 0.3s ease;
+        backdrop-filter: blur(10px);
+      }
+
+      .project-card:hover {
+        transform: translateY(-6px);
+        box-shadow: 0 0 20px #0ff5;
+      }
+
+      .project-card h3 {
+        color: #0ff;
+        margin-top: 0;
+      }
+
+      a {
+        color: #0ff;
+        text-decoration: none;
+      }
+
+      .tech-stack, .connect {
+        text-align: center;
+      }
+
+      footer {
+        text-align: center;
+        padding: 2rem;
+        font-size: 0.9rem;
+        color: #666;
+      }
+    </style>
   </head>
-  <body style="background-color: black; color: white; text-align: center;">
-    <h1>Hello, world</h1>
+  <body>
+    <div id="content">
+      <h1>Avalin</h1>
+      <p class="tagline">Creative Technologist · Interactive Developer · Logic Tinkerer</p>
+    </div>
+
+    <section>
+      <h2 style="text-align:center;">Featured Projects</h2>
+      <div class="project-grid">
+        <div class="project-card">
+          <h3>Nightmare Before Christmas VR</h3>
+          <p>Gaze-based interaction in WebVR using A-Frame, themed around NBC. Built characters & logic.</p>
+        </div>
+        <div class="project-card">
+          <h3>Pokémon VR</h3>
+          <p>Catch Pokémon by throwing Pokéballs with gaze-based interaction. WebVR + A-Frame + JS.</p>
+        </div>
+        <div class="project-card">
+          <h3>Smartplan Backend</h3>
+          <p>Designed rostering logic with Drools & C# to solve NP-hard planning problems.</p>
+        </div>
+        <div class="project-card">
+          <h3>Homeowners Association Website</h3>
+          <p>Custom-built admin/editable site using JS, Bootstrap, JSON from Google Sheets.</p>
+        </div>
+        <div class="project-card">
+          <h3>LEGO Super Mario (Internal)</h3>
+          <p>Worked on C# backend and interactive logic for LEGO's programmable toy line.</p>
+        </div>
+        <div class="project-card">
+          <h3>AquaGlobe VR</h3>
+          <p>Built VR content for AquaGlobe's sustainability initiatives. Unity + C# + VR APIs.</p>
+        </div>
+      </div>
+    </section>
+
+    <section class="tech-stack">
+      <h2>Tech Stack</h2>
+      <p>C# · Unity · JavaScript · WebVR · A-Frame · Three.js · HTML/CSS · Drools · Git · VR APIs · Google Apps Script · Bootstrap</p>
+    </section>
+
+    <section class="connect">
+      <h2>Let's Connect</h2>
+      <p><a href="https://github.com/Avalin" target="_blank">GitHub @Avalin</a></p>
+    </section>
+
+    <footer>
+      <p>© 2025 Avalin. Built with code, coffee, and probably some crying.</p>
+    </footer>
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
+    <script>
+      // Softer particles instead of harsh 3D object
+      const scene = new THREE.Scene();
+      const camera = new THREE.PerspectiveCamera(75, window.innerWidth / window.innerHeight, 0.1, 1000);
+      const renderer = new THREE.WebGLRenderer({ alpha: true });
+      renderer.setSize(window.innerWidth, window.innerHeight);
+      document.body.appendChild(renderer.domElement);
+
+      const particles = new THREE.BufferGeometry();
+      const count = 500;
+      const positions = new Float32Array(count * 3);
+      for (let i = 0; i < count * 3; i++) {
+        positions[i] = (Math.random() - 0.5) * 10;
+      }
+      particles.setAttribute('position', new THREE.BufferAttribute(positions, 3));
+
+      const particleMaterial = new THREE.PointsMaterial({ color: 0x00ffff, size: 0.05 });
+      const points = new THREE.Points(particles, particleMaterial);
+      scene.add(points);
+
+      camera.position.z = 5;
+
+      function animate() {
+        requestAnimationFrame(animate);
+        points.rotation.y += 0.0015;
+        points.rotation.x += 0.001;
+        renderer.render(scene, camera);
+      }
+      animate();
+
+      window.addEventListener('resize', () => {
+        camera.aspect = window.innerWidth / window.innerHeight;
+        camera.updateProjectionMatrix();
+        renderer.setSize(window.innerWidth, window.innerHeight);
+      });
+    </script>
   </body>
 </html>
