--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
     </section>
 
     <footer>
-      <p>© 2025 Avalin. Built with code, coffee, and probably some crying.</p>
+      <p>© 2025 Avalin. Built with code, creativity, and probably some crying.</p>
     </footer>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
