--- a/index.html
+++ b/index.html
@@ -115,11 +115,11 @@
           <h3>Pokémon VR</h3>
           <p>Catch Pokémon by throwing Pokéballs with gaze-based interaction. WebVR + A-Frame + JS.</p>
         </div>
-        <div class="project-card">
+        <div class="project-card" >
           <h3>Smartplan Backend</h3>
           <p>Designed rostering logic with Drools & C# to solve NP-hard planning problems.</p>
         </div>
-        <div class="project-card">
+        <div class="project-card" onclick="window.open('https://www.rytterpark.dk', '_blank')">
           <h3>Homeowners Association Website</h3>
           <p>Custom-built admin/editable site using JS, Bootstrap, JSON from Google Sheets.</p>
         </div>
