--- a/index.html
+++ b/index.html
@@ -123,13 +123,13 @@
           <h3>Homeowners Association Website</h3>
           <p>Custom-built admin/editable site using JS, Bootstrap, JSON from Google Sheets.</p>
         </div>
-        <div class="project-card">
-          <h3>LEGO Super Mario (Internal)</h3>
-          <p>Worked on C# backend and interactive logic for LEGO's programmable toy line.</p>
+        <div class="project-card" onclick="window.open('https://www.amazon.com/gp/product/B08CNKKS9G', '_blank')">
+          <h3>LEGO Super Mario App</h3>
+          <p>Worked on C# backend and interactive logic for LEGO's Super Mario App.</p>
         </div>
         <div class="project-card">
           <h3>AquaGlobe VR</h3>
-          <p>Built VR content for AquaGlobe's sustainability initiatives. Unity + C# + VR APIs.</p>
+          <p>Built VR content for AquaGlobe. A guided tour of the water’s journey from borehole to consumer. Unity + C# + VR APIs.</p>
         </div>
       </div>
     </section>
