--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
           <h3>Pokémon VR</h3>
           <p>Catch Pokémon by throwing Pokéballs with gaze-based interaction. WebVR + A-Frame + JS.</p>
         </div>
-        <div class="project-card" >
+        <div class="project-card" onclick="window.open('https://smartplan.dk/', '_blank')">
           <h3>Smartplan Backend</h3>
           <p>Designed rostering logic with Drools & C# to solve NP-hard planning problems.</p>
         </div>
@@ -127,7 +127,7 @@
           <h3>LEGO Super Mario App</h3>
           <p>Worked on C# backend and interactive logic for LEGO's Super Mario App.</p>
         </div>
-        <div class="project-card">
+        <div class="project-card" onclick="window.open('https://www.via.dk/uddannelser/softwareingenioer/kate-og-astrid-softwareingenioer', '_blank')">
           <h3>AquaGlobe VR</h3>
           <p>Built VR content for AquaGlobe. A guided tour of the water’s journey from borehole to consumer. Unity + C# + VR APIs.</p>
         </div>
