--- a/index.html
+++ b/index.html
@@ -69,6 +69,7 @@
         border-radius: 16px;
         transition: transform 0.3s ease, box-shadow 0.3s ease;
         backdrop-filter: blur(10px);
+        cursor: pointer;
       }
 
       .project-card:hover {
@@ -86,8 +87,15 @@
         text-decoration: none;
       }
 
-      .tech-stack, .connect {
+      .tech-stack, .connect, .about {
         text-align: center;
+      }
+
+      .about p {
+        max-width: 700px;
+        margin: 0 auto;
+        font-size: 1.1rem;
+        color: #ccc;
       }
 
       footer {
@@ -95,6 +103,18 @@
         padding: 2rem;
         font-size: 0.9rem;
         color: #666;
+      }
+
+      @media (max-width: 600px) {
+        h1 {
+          font-size: 2.2rem;
+        }
+        p.tagline {
+          font-size: 1rem;
+        }
+        .project-card p {
+          font-size: 0.9rem;
+        }
       }
     </style>
   </head>
