--- a/index.html
+++ b/index.html
@@ -3,11 +3,13 @@
   <head>
     <meta charset="UTF-8" />
     <title>Avalin | Creative Technologist</title>
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
     <style>
       html, body {
         margin: 0;
         padding: 0;
-        height: 100%;
+        height: auto;
+        min-height: 100vh;
         font-family: 'Segoe UI', sans-serif;
         background: radial-gradient(ellipse at top, #0e0e0e 0%, #000000 100%);
         color: white;
@@ -17,6 +19,8 @@
 
       body {
         overflow-y: auto;
+        position: relative;
+        z-index: 1;
       }
 
       canvas {
@@ -49,11 +53,13 @@
       }
 
       section {
+        display: block;
         padding: 4rem 2rem;
         max-width: 1100px;
         margin: 0 auto;
         position: relative;
         z-index: 1;
+        overflow: visible;
       }
 
       .project-grid {
@@ -77,6 +83,12 @@
         box-shadow: 0 0 20px #0ff5;
       }
 
+      .project-card img {
+        width: 100%;
+        border-radius: 8px;
+        margin-bottom: 1rem;
+      }
+
       .project-card h3 {
         color: #0ff;
         margin-top: 0;
@@ -96,6 +108,17 @@
         margin: 0 auto;
         font-size: 1.1rem;
         color: #ccc;
+      }
+
+      .resume-btn {
+        background: #0ff;
+        color: #000;
+        padding: 0.7rem 1.5rem;
+        border: none;
+        border-radius: 8px;
+        font-weight: bold;
+        cursor: pointer;
+        text-decoration: none;
       }
 
       footer {
@@ -119,49 +142,67 @@
     </style>
   </head>
   <body>
-    <div id="content">
+    <div id="content" data-aos="fade-down">
       <h1>Avalin</h1>
       <p class="tagline">Creative Technologist · Interactive Developer · Logic Tinkerer</p>
     </div>
 
-    <section>
+    <section class="about" data-aos="fade-up">
+      <h2>About Me</h2>
+      <p>
+        I'm Avalin — a creative technologist with a love for weird interfaces, logical problem-solving,
+        and immersive experiences. I’ve built everything from backend schedulers to WebVR worlds and
+        contributed to projects like LEGO Super Mario and AquaGlobe. When I’m not coding, I’m probably
+        admiring cats or designing something nobody asked for (but everyone will secretly love).
+      </p>
+    </section>
+
+    <section data-aos="fade-up">
       <h2 style="text-align:center;">Featured Projects</h2>
       <div class="project-grid">
-        <div class="project-card">
+        <div class="project-card" data-aos="zoom-in">
+          <img src="images/nbfc.gif" alt="Nightmare VR Preview">
           <h3>Nightmare Before Christmas VR</h3>
           <p>Gaze-based interaction in WebVR using A-Frame, themed around NBC. Built characters & logic.</p>
         </div>
-        <div class="project-card">
+        <div class="project-card" data-aos="zoom-in">
+          <img src="images/pokemon.gif" alt="Pokemon VR Preview">
           <h3>Pokémon VR</h3>
           <p>Catch Pokémon by throwing Pokéballs with gaze-based interaction. WebVR + A-Frame + JS.</p>
         </div>
-        <div class="project-card" onclick="window.open('https://smartplan.dk/', '_blank')">
-          <h3>Smartplan Backend</h3>
-          <p>Designed rostering logic with Drools & C# to solve NP-hard planning problems.</p>
-        </div>
-        <div class="project-card" onclick="window.open('https://www.rytterpark.dk', '_blank')">
-          <h3>Homeowners Association Website</h3>
-          <p>Custom-built admin/editable site using JS, Bootstrap, JSON from Google Sheets.</p>
-        </div>
-        <div class="project-card" onclick="window.open('https://www.amazon.com/gp/product/B08CNKKS9G', '_blank')">
+        <div class="project-card" onclick="window.open('https://www.amazon.com/gp/product/B08CNKKS9G', '_blank')" data-aos="zoom-in">
+          <img src="images/lego-super-mario.png" alt="LEGO Preview">
           <h3>LEGO Super Mario App</h3>
           <p>Worked on C# backend and interactive logic for LEGO's Super Mario App.</p>
         </div>
-        <div class="project-card" onclick="window.open('https://www.via.dk/uddannelser/softwareingenioer/kate-og-astrid-softwareingenioer', '_blank')">
+        <div class="project-card" onclick="window.open('https://smartplan.dk/', '_blank')" data-aos="zoom-in">
+          <img src="images/smartplan.png" alt="Smartplan Preview">
+          <h3>Smartplan Backend</h3>
+          <p>Designed rostering logic with Drools & C# to solve NP-hard planning problems.</p>
+        </div>
+        <div class="project-card" onclick="window.open('https://www.rytterpark.dk', '_blank')" data-aos="zoom-in">
+          <img src="images/rytterpark.png" alt="Rytterpark Preview">
+          <h3>Homeowners Association Website</h3>
+          <p>Custom-built admin/editable site using JS, Bootstrap, JSON from Google Sheets.</p>
+        </div>
+        <div class="project-card" onclick="window.open('https://www.via.dk/uddannelser/softwareingenioer/kate-og-astrid-softwareingenioer', '_blank')" data-aos="zoom-in">
+          <img src="images/aquaglobe.png" alt="AquaGlobe Preview">
           <h3>AquaGlobe VR</h3>
           <p>Built VR content for AquaGlobe. A guided tour of the water’s journey from borehole to consumer. Unity + C# + VR APIs.</p>
         </div>
       </div>
     </section>
 
-    <section class="tech-stack">
+    <section class="tech-stack" data-aos="fade-up">
       <h2>Tech Stack</h2>
       <p>C# · Unity · JavaScript · WebVR · A-Frame · Three.js · HTML/CSS · Drools · Git · VR APIs · Google Apps Script · Bootstrap</p>
     </section>
 
-    <section class="connect">
+    <section class="connect" data-aos="fade-up">
       <h2>Let's Connect</h2>
       <p><a href="https://github.com/Avalin" target="_blank">GitHub @Avalin</a></p>
+      <p><a href="mailto:astridavalin@gmail.com" class="resume-btn">Email Me</a></p>
+      <p><a href="documents/Avalin_Resume.pdf" class="resume-btn" download>Download Resume</a></p>
     </section>
 
     <footer>
@@ -169,8 +210,13 @@
     </footer>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script>
-      // Softer particles instead of harsh 3D object
+      AOS.init({
+        duration: 800,
+        once: true
+      });
+
       const scene = new THREE.Scene();
       const camera = new THREE.PerspectiveCamera(75, window.innerWidth / window.innerHeight, 0.1, 1000);
       const renderer = new THREE.WebGLRenderer({ alpha: true });
