--- a/index.html
+++ b/index.html
@@ -76,6 +76,9 @@
         transition: transform 0.3s ease, box-shadow 0.3s ease;
         backdrop-filter: blur(10px);
         cursor: pointer;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
       }
 
       .project-card:hover {
@@ -85,6 +88,8 @@
 
       .project-card img {
         width: 100%;
+        max-height: 180px;
+        object-fit: cover;
         border-radius: 8px;
         margin-bottom: 1rem;
       }
@@ -99,7 +104,20 @@
         text-decoration: none;
       }
 
-      .tech-stack, .connect, .about {
+      .tech-stack, .about {
+        text-align: center;
+      }
+
+      .connect {
+        text-align: center;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        gap: 1rem;
+      }
+
+      .connect a {
+        display: inline-block;
         text-align: center;
       }
 
@@ -119,6 +137,8 @@
         font-weight: bold;
         cursor: pointer;
         text-decoration: none;
+        margin: 0.25rem 0;
+        width: fit-content;
       }
 
       footer {
@@ -200,9 +220,9 @@
 
     <section class="connect" data-aos="fade-up">
       <h2>Let's Connect</h2>
-      <p><a href="https://github.com/Avalin" target="_blank">GitHub @Avalin</a></p>
-      <p><a href="mailto:astridavalin@gmail.com" class="resume-btn">Email Me</a></p>
-      <p><a href="documents/Avalin_Resume.pdf" class="resume-btn" download>Download Resume</a></p>
+      <a href="https://github.com/Avalin" target="_blank">GitHub @Avalin</a>
+      <a href="mailto:astridavalin@gmail.com" class="resume-btn">Email Me</a>
+      <a href="documents/Avalin_Resume.pdf" class="resume-btn" download>Download Resume</a>
     </section>
 
     <footer>
