--- a/index.html
+++ b/index.html
@@ -1,308 +1,296 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <title>Avalin | Creative Technologist</title>
-  <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
-  <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@500;700&display=swap" rel="stylesheet">
-  <style>
-    html, body {
-      margin: 0;
-      padding: 0;
-      min-height: 100vh;
-      font-family: 'Segoe UI', sans-serif;
-      background: radial-gradient(circle at top, #101010 0%, #000 90%);
-      color: white;
-      overflow-x: hidden;
-      scroll-behavior: smooth;
-      position: relative;
-    }
+  <head>
+    <meta charset="UTF-8" />
+    <title>Avalin | Creative Technologist</title>
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
+    <style>
+      html, body {
+        margin: 0;
+        padding: 0;
+        min-height: 100vh;
+        font-family: 'Segoe UI', sans-serif;
+        background: radial-gradient(circle at top, #101010 0%, #000 90%);
+        color: white;
+        overflow-x: hidden;
+        scroll-behavior: smooth;
+        position: relative;
+      }
 
-    body.kira-mode, .kira-mode {
-      font-family: 'Quicksand', sans-serif;
-    }
+      body::before {
+        content: "";
+        position: fixed;
+        top: -200px;
+        left: -200px;
+        width: 140%;
+        height: 140%;
+        background: radial-gradient(circle at center, rgba(0, 255, 255, 0.08), transparent 60%),
+                    radial-gradient(circle at 70% 20%, rgba(255, 255, 255, 0.03), transparent 50%);
+        pointer-events: none;
+        z-index: 0;
+        animation: slowGlow 20s infinite alternate ease-in-out;
+      }
 
-    body::before {
-      content: "";
-      position: fixed;
-      top: -200px;
-      left: -200px;
-      width: 140%;
-      height: 140%;
-      background: radial-gradient(circle at center, rgba(0, 255, 255, 0.08), transparent 60%),
-                  radial-gradient(circle at 70% 20%, rgba(255, 255, 255, 0.03), transparent 50%);
-      pointer-events: none;
-      z-index: 0;
-      animation: slowGlow 20s infinite alternate ease-in-out;
-    }
+      @keyframes slowGlow {
+        0% { transform: scale(1) rotate(0deg); }
+        100% { transform: scale(1.2) rotate(15deg); }
+      }
 
-    @keyframes slowGlow {
-      0% { transform: scale(1) rotate(0deg); }
-      100% { transform: scale(1.2) rotate(15deg); }
-    }
+      canvas {
+        position: fixed;
+        top: 0;
+        left: 0;
+        z-index: 0;
+        pointer-events: none;
+      }
 
-    canvas {
-      position: fixed;
-      top: 0;
-      left: 0;
-      z-index: 0;
-      pointer-events: none;
-    }
+      #content {
+        position: relative;
+        z-index: 1;
+        text-align: center;
+        padding: 10vh 2rem 5vh;
+      }
 
-    #content {
-      position: relative;
-      z-index: 1;
-      text-align: center;
-      padding: 10vh 2rem 5vh;
-    }
+      h1 {
+        font-size: 3.5rem;
+        margin: 0;
+        background: linear-gradient(to right, #0ff, #ff0);
+        -webkit-background-clip: text;
+        -webkit-text-fill-color: transparent;
+      }
 
-    h1 {
-      font-size: 3.5rem;
-      margin: 0;
-      background: linear-gradient(to right, #0ff, #ff0);
-      -webkit-background-clip: text;
-      -webkit-text-fill-color: transparent;
-    }
+      p.tagline {
+        font-size: 1.3rem;
+        color: #ccc;
+        margin-bottom: 4rem;
+      }
 
-    p.tagline {
-      font-size: 1.3rem;
-      color: #ccc;
-      margin-bottom: 4rem;
-    }
+      section {
+        padding: 4rem 2rem;
+        max-width: 1100px;
+        margin: 0 auto;
+        position: relative;
+        z-index: 1;
+      }
 
-    section {
-      padding: 4rem 2rem;
-      max-width: 1100px;
-      margin: 0 auto;
-      position: relative;
-      z-index: 1;
-    }
+      .project-grid {
+        display: grid;
+        grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
+        gap: 2rem;
+      }
 
-    .project-grid {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
-      gap: 2rem;
-    }
+      .project-card {
+        background: rgba(255, 255, 255, 0.05);
+        border: 1px solid rgba(255, 255, 255, 0.1);
+        padding: 1.5rem;
+        border-radius: 16px;
+        transition: transform 0.3s ease, box-shadow 0.3s ease;
+        backdrop-filter: blur(10px);
+        cursor: pointer;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+      }
 
-    .project-card {
-      background: rgba(255, 255, 255, 0.05);
-      border: 1px solid rgba(255, 255, 255, 0.1);
-      padding: 1.5rem;
-      border-radius: 16px;
-      transition: transform 0.3s ease, box-shadow 0.3s ease;
-      backdrop-filter: blur(10px);
-      cursor: pointer;
-      display: flex;
-      flex-direction: column;
-      justify-content: space-between;
-    }
+      .project-card:hover {
+        transform: translateY(-6px);
+        box-shadow: 0 0 20px #0ff5;
+      }
 
-    .project-card:hover {
-      transform: translateY(-6px);
-      box-shadow: 0 0 20px #0ff5;
-    }
+      .project-card img {
+        width: 100%;
+        max-height: 180px;
+        object-fit: cover;
+        border-radius: 8px;
+        margin-bottom: 1rem;
+      }
 
-    .project-card img {
-      width: 100%;
-      max-height: 180px;
-      object-fit: cover;
-      border-radius: 8px;
-      margin-bottom: 1rem;
-    }
+      .project-card h3 {
+        color: #0ff;
+        margin-top: 0;
+      }
 
-    .project-card h3 {
-      color: #0ff;
-      margin-top: 0;
-    }
+      a {
+        color: #0ff;
+        text-decoration: none;
+      }
 
-    .tech-stack, .about {
-      text-align: center;
-    }
+      .tech-stack, .about {
+        text-align: center;
+      }
 
-    .connect {
-      text-align: center;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      gap: 1rem;
-    }
+      .connect {
+        text-align: center;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        gap: 1rem;
+      }
 
-    .about p {
-      max-width: 700px;
-      margin: 0 auto;
-      font-size: 1.1rem;
-      color: #ccc;
-    }
+      .connect a {
+        display: inline-block;
+        text-align: center;
+      }
 
-    .resume-btn {
-      background: linear-gradient(135deg, #00f0ff, #38f9d7);
-      color: #000;
-      padding: 0.7rem 1.5rem;
-      border: none;
-      border-radius: 8px;
-      font-weight: bold;
-      cursor: pointer;
-      text-decoration: none;
-      margin: 0.25rem 0;
-      width: fit-content;
-      box-shadow: 0 0 12px #00f0ff80;
-      transition: background 0.3s ease;
-    }
+      .about p {
+        max-width: 700px;
+        margin: 0 auto;
+        font-size: 1.1rem;
+        color: #ccc;
+      }
 
-    .resume-btn:hover {
-      background: linear-gradient(135deg, #38f9d7, #00f0ff);
-    }
+      .resume-btn {
+        background: linear-gradient(135deg, #00f0ff, #38f9d7);
+        color: #000;
+        padding: 0.7rem 1.5rem;
+        border: none;
+        border-radius: 8px;
+        font-weight: bold;
+        cursor: pointer;
+        text-decoration: none;
+        margin: 0.25rem 0;
+        width: fit-content;
+        box-shadow: 0 0 12px #00f0ff80;
+        transition: background 0.3s ease;
+      }
 
-    footer {
-      text-align: center;
-      padding: 2rem;
-      font-size: 0.9rem;
-      color: #666;
-    }
+      .resume-btn:hover {
+        background: linear-gradient(135deg, #38f9d7, #00f0ff);
+      }
 
-    .kira-mode h1, .kira-mode h2, .kira-mode h3 {
-      color: #ff9ce6 !important;
-      text-shadow: 0 0 10px #ffc8f6;
-    }
-    .kira-mode .tagline { color: #fcd2f2 !important; }
-    .kira-mode .resume-btn {
-      background: linear-gradient(135deg, #ffc8f6, #f0bfff);
-      box-shadow: 0 0 14px #ffc8f699;
-    }
-    .kira-mode .resume-btn:hover {
-      background: linear-gradient(135deg, #f0bfff, #ffc8f6);
-    }
-    .kira-mode footer { color: #ffb6e6; }
-    .kira-mode .project-card {
-      background: rgba(255, 220, 250, 0.07) !important;
-      border-color: rgba(255, 220, 250, 0.15);
-    }
-    .kira-mode .project-card h3 {
-      color: #ffb3ec !important;
-    }
+      footer {
+        text-align: center;
+        padding: 2rem;
+        font-size: 0.9rem;
+        color: #666;
+      }
 
-    .kira-paw {
-      position: fixed;
-      bottom: 20px;
-      right: 20px;
-      background: #ffc8f6;
-      color: #000;
-      border-radius: 50%;
-      width: 50px;
-      height: 50px;
-      font-size: 1.5rem;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      cursor: pointer;
-      z-index: 9999;
-      box-shadow: 0 0 12px #ffc8f6aa;
-      transition: transform 0.2s ease;
-    }
-    .kira-paw:hover { transform: scale(1.1); }
-  </style>
-</head>
-<body>
-  <div id="content" data-aos="fade-down">
-    <h1>Avalin</h1>
-    <p class="tagline">Creative Technologist · Interactive Developer · Logic Tinkerer</p>
-  </div>
-
-  <section class="about" data-aos="fade-up">
-    <h2>About Me</h2>
-    <p>
-      I'm Avalin — a creative technologist with a love for weird interfaces, logical problem-solving,
-      and immersive experiences. When I’m not coding, I’m probably admiring cats or designing
-      something nobody asked for (but everyone will secretly love).
-    </p>
-  </section>
-
-  <section data-aos="fade-up">
-    <h2 style="text-align:center;">Featured Projects</h2>
-    <div class="project-grid">
-      <div class="project-card" data-aos="zoom-in">
-        <img src="images/nbfc.gif" alt="Nightmare VR Preview">
-        <h3>Nightmare Before Christmas VR</h3>
-        <p>Gaze-based interaction in WebVR using A-Frame, themed around NBC. Built characters & logic.</p>
-      </div>
-      <div class="project-card" data-aos="zoom-in">
-        <img src="images/pokemon.gif" alt="Pokemon VR Preview">
-        <h3>Pokémon VR</h3>
-        <p>Catch Pokémon by throwing Pokéballs with gaze-based interaction. WebVR + A-Frame + JS.</p>
-      </div>
-      <div class="project-card" data-aos="zoom-in">
-        <img src="images/lego-super-mario.png" alt="LEGO Preview">
-        <h3>LEGO Super Mario App</h3>
-        <p>Worked on C# backend and interactive logic for LEGO's Super Mario App.</p>
-      </div>
+      @media (max-width: 600px) {
+        h1 {
+          font-size: 2.2rem;
+        }
+        p.tagline {
+          font-size: 1rem;
+        }
+        .project-card p {
+          font-size: 0.9rem;
+        }
+      }
+    </style>
+  </head>
+  <body>
+    <div id="content" data-aos="fade-down">
+      <h1>Avalin</h1>
+      <p class="tagline">Creative Technologist · Interactive Developer · Logic Tinkerer</p>
     </div>
-  </section>
 
-  <section class="tech-stack" data-aos="fade-up">
-    <h2>Tech Stack</h2>
-    <p>C# · Unity · JavaScript · WebVR · A-Frame · Three.js · HTML/CSS · Drools · Git · VR APIs · Google Apps Script · Bootstrap</p>
-  </section>
+    <section class="about" data-aos="fade-up">
+      <h2>About Me</h2>
+      <p>
+        I'm Avalin — a creative technologist with a love for weird interfaces, logical problem-solving,
+        and immersive experiences. I’ve built everything from backend schedulers to WebVR worlds and
+        contributed to projects like LEGO Super Mario and AquaGlobe. When I’m not coding, I’m probably
+        admiring cats or designing something nobody asked for (but everyone will secretly love).
+      </p>
+    </section>
 
-  <section class="connect" data-aos="fade-up">
-    <h2>Let's Connect</h2>
-    <a href="https://github.com/Avalin" class="resume-btn" target="_blank">GitHub @Avalin</a>
-    <a href="mailto:astridavalin@gmail.com" class="resume-btn">Email Me</a>
-    <a href="documents/Avalin_Resume.pdf" class="resume-btn" download>Download Resume</a>
-  </section>
+    <section data-aos="fade-up">
+      <h2 style="text-align:center;">Featured Projects</h2>
+      <div class="project-grid">
+        <!-- Swap these out with your actual images and URLs -->
+        <div class="project-card" data-aos="zoom-in">
+          <img src="images/nbfc.gif" alt="Nightmare VR Preview">
+          <h3>Nightmare Before Christmas VR</h3>
+          <p>Gaze-based interaction in WebVR using A-Frame, themed around NBC. Built characters & logic.</p>
+        </div>
+        <div class="project-card" data-aos="zoom-in">
+          <img src="images/pokemon.gif" alt="Pokemon VR Preview">
+          <h3>Pokémon VR</h3>
+          <p>Catch Pokémon by throwing Pokéballs with gaze-based interaction. WebVR + A-Frame + JS.</p>
+        </div>
+        <div class="project-card" onclick="window.open('https://www.amazon.com/gp/product/B08CNKKS9G', '_blank')" data-aos="zoom-in">
+          <img src="images/lego-super-mario.png" alt="LEGO Preview">
+          <h3>LEGO Super Mario App</h3>
+          <p>Worked on C# backend and interactive logic for LEGO's Super Mario App.</p>
+        </div>
+        <div class="project-card" onclick="window.open('https://smartplan.dk/', '_blank')" data-aos="zoom-in">
+          <img src="images/smartplan.png" alt="Smartplan Preview">
+          <h3>Smartplan Backend</h3>
+          <p>Designed rostering logic with Drools & C# to solve NP-hard planning problems.</p>
+        </div>
+        <div class="project-card" onclick="window.open('https://www.rytterpark.dk', '_blank')" data-aos="zoom-in">
+          <img src="images/rytterpark.png" alt="Rytterpark Preview">
+          <h3>Homeowners Association Website</h3>
+          <p>Custom-built admin/editable site using JS, Bootstrap, JSON from Google Sheets.</p>
+        </div>
+        <div class="project-card" onclick="window.open('https://www.via.dk/uddannelser/softwareingenioer/kate-og-astrid-softwareingenioer', '_blank')" data-aos="zoom-in">
+          <img src="images/aquaglobe.png" alt="AquaGlobe Preview">
+          <h3>AquaGlobe VR</h3>
+          <p>Built VR content for AquaGlobe. A guided tour of the water’s journey from borehole to consumer. Unity + C# + VR APIs.</p>
+        </div>
+      </div>
+    </section>
 
-  <footer>
-    <p>© 2025 Avalin. Built with code, creativity, and probably some crying.</p>
-  </footer>
+    <section class="tech-stack" data-aos="fade-up">
+      <h2>Tech Stack</h2>
+      <p>C# · Unity · JavaScript · WebVR · A-Frame · Three.js · HTML/CSS · Drools · Git · VR APIs · Google Apps Script · Bootstrap</p>
+    </section>
 
-  <div class="kira-paw" onclick="toggleKiraMode()" title="Toggle Kira Mode">🐾</div>
+    <section class="connect" data-aos="fade-up">
+      <h2>Let's Connect</h2>
+      <a href="https://github.com/Avalin" class="resume-btn" target="_blank">GitHub @Avalin</a>
+      <a href="mailto:astridavalin@gmail.com" class="resume-btn">Email Me</a>
+      <a href="documents/Avalin_Resume.pdf" class="resume-btn" download>Download Resume</a>
+    </section>
 
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
-  <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-  <script>
-    AOS.init({ duration: 800, once: true });
+    <footer>
+      <p>© 2025 Avalin. Built with code, creativity, and probably some crying.</p>
+    </footer>
 
-    const scene = new THREE.Scene();
-    const camera = new THREE.PerspectiveCamera(75, window.innerWidth / window.innerHeight, 0.1, 1000);
-    const renderer = new THREE.WebGLRenderer({ alpha: true });
-    renderer.setSize(window.innerWidth, window.innerHeight);
-    document.body.appendChild(renderer.domElement);
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script>
+      AOS.init({
+        duration: 800,
+        once: true
+      });
 
-    const particles = new THREE.BufferGeometry();
-    const count = 500;
-    const positions = new Float32Array(count * 3);
-    for (let i = 0; i < count * 3; i++) {
-      positions[i] = (Math.random() - 0.5) * 10;
-    }
-    particles.setAttribute('position', new THREE.BufferAttribute(positions, 3));
-
-    let hue = 185;
-    const particleMaterial = new THREE.PointsMaterial({ size: 0.05, color: new THREE.Color(`hsl(${hue}, 100%, 60%)`) });
-    const points = new THREE.Points(particles, particleMaterial);
-    scene.add(points);
-    camera.position.z = 5;
-
-    function animate() {
-      requestAnimationFrame(animate);
-      hue = (hue + 0.05) % 360;
-      const adjustedHue = 180 + Math.sin(hue * 0.02) * 20;
-      particleMaterial.color.setHSL(adjustedHue / 360, 1, 0.6);
-      points.rotation.y += 0.0015;
-      points.rotation.x += 0.001;
-      renderer.render(scene, camera);
-    }
-    animate();
-
-    window.addEventListener('resize', () => {
-      camera.aspect = window.innerWidth / window.innerHeight;
-      camera.updateProjectionMatrix();
+      const scene = new THREE.Scene();
+      const camera = new THREE.PerspectiveCamera(75, window.innerWidth / window.innerHeight, 0.1, 1000);
+      const renderer = new THREE.WebGLRenderer({ alpha: true });
       renderer.setSize(window.innerWidth, window.innerHeight);
-    });
+      document.body.appendChild(renderer.domElement);
 
-    function toggleKiraMode() {
-      document.body.classList.toggle("kira-mode");
-      const title = document.querySelector('h1');
-      title.textContent = document.body.classList.contains("kira-mode") ? "Kira is Watching..." : "Avalin";
-    }
-  </script>
-</body>
+      const particles = new THREE.BufferGeometry();
+      const count = 500;
+      const positions = new Float32Array(count * 3);
+      for (let i = 0; i < count * 3; i++) {
+        positions[i] = (Math.random() - 0.5) * 10;
+      }
+      particles.setAttribute('position', new THREE.BufferAttribute(positions, 3));
+
+      let hue = 185;
+      const particleMaterial = new THREE.PointsMaterial({ size: 0.05, color: new THREE.Color(`hsl(${hue}, 100%, 60%)`) });
+      const points = new THREE.Points(particles, particleMaterial);
+      scene.add(points);
+
+      camera.position.z = 5;
+
+      function animate() {
+        requestAnimationFrame(animate);
+        hue = (hue + 0.05) % 360;
+        particleMaterial.color.setHSL((180 + Math.sin(hue * 0.02) * 20) / 360, 1, 0.6);
+        points.rotation.y += 0.0015;
+        points.rotation.x += 0.001;
+        renderer.render(scene, camera);
+      }
+      animate();
+
+      window.addEventListener('resize', () => {
+        camera.aspect = window.innerWidth / window.innerHeight;
+        camera.updateProjectionMatrix();
+        renderer.setSize(window.innerWidth, window.innerHeight);
+      });
+    </script>
+  </body>
 </html>
