--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
         <div class="project-card" onclick="window.open('https://smartplan.dk/', '_blank')" data-aos="zoom-in">
           <img src="images/smartplan.png" alt="Smartplan Preview">
           <h3>Smartplan Backend</h3>
-          <p>Designed rostering logic with Drools & C# to solve NP-hard planning problems.</p>
+          <p>Designed rostering logic with Drools Rule Engine & Java to solve NP-hard planning problems.</p>
         </div>
         <div class="project-card" onclick="window.open('https://www.rytterpark.dk', '_blank')" data-aos="zoom-in">
           <img src="images/rytterpark.png" alt="Rytterpark Preview">
