--- a/index.html
+++ b/index.html
@@ -28,32 +28,32 @@
       <h2 style="text-align:center;" data-i18n="projects_title">Featured Projects</h2>
       <div class="project-grid">
         <div class="project-card" data-aos="zoom-in">
-          <img src="images/nbfc.gif" alt="Nightmare VR Preview">
+          <img src="images/projects/nbfc.gif" alt="Nightmare VR Preview">
           <h3 data-i18n="project_nbfc_title">Nightmare Before Christmas VR</h3>
           <p data-i18n="project_nbfc_desc">Gaze-based interaction in WebVR using A-Frame, themed around NBC. Built characters & logic.</p>
         </div>
         <div class="project-card" data-aos="zoom-in">
-          <img src="images/pokemon.gif" alt="Pokemon VR Preview">
+          <img src="images/projects/pokemon.gif" alt="Pokemon VR Preview">
           <h3 data-i18n="project_pokemon_title">Pokémon VR</h3>
           <p data-i18n="project_pokemon_desc">Catch Pokémon by throwing Pokéballs with gaze-based interaction. WebVR + A-Frame + JS.</p>
         </div>
         <div class="project-card" onclick="window.open('https://www.amazon.com/gp/product/B08CNKKS9G', '_blank')" data-aos="zoom-in">
-          <img src="images/lego-super-mario.png" alt="LEGO Preview">
+          <img src="images/projects/lego-super-mario.png" alt="LEGO Preview">
           <h3 data-i18n="project_lego_title">LEGO Super Mario App</h3>
           <p data-i18n="project_lego_desc">Worked on C# backend and interactive logic for LEGO's Super Mario App.</p>
         </div>
         <div class="project-card" onclick="window.open('https://smartplan.dk/', '_blank')" data-aos="zoom-in">
-          <img src="images/smartplan.png" alt="Smartplan Preview">
+          <img src="images/projects/smartplan.png" alt="Smartplan Preview">
           <h3 data-i18n="project_smartplan_title">Smartplan Backend</h3>
           <p data-i18n="project_smartplan_desc">Designed rostering logic with Drools Rule Engine & Java to solve NP-hard planning problems.</p>
         </div>
         <div class="project-card" onclick="window.open('https://www.rytterpark.dk', '_blank')" data-aos="zoom-in">
-          <img src="images/rytterpark.png" alt="Rytterpark Preview">
+          <img src="images/projects/rytterpark.png" alt="Rytterpark Preview">
           <h3 data-i18n="project_rytterpark_title">Homeowners Association Website</h3>
           <p data-i18n="project_rytterpark_desc">Custom-built admin/editable site using JS, Bootstrap, JSON from Google Sheets.</p>
         </div>
         <div class="project-card" onclick="window.open('https://www.via.dk/uddannelser/softwareingenioer/kate-og-astrid-softwareingenioer', '_blank')" data-aos="zoom-in">
-          <img src="images/aquaglobe.png" alt="AquaGlobe Preview">
+          <img src="images/projects/aquaglobe.png" alt="AquaGlobe Preview">
           <h3 data-i18n="project_aquaglobe_title">AquaGlobe VR</h3>
           <p data-i18n="project_aquaglobe_desc">Built VR content for AquaGlobe. A guided tour of the water’s journey from borehole to consumer. Unity + C# + VR APIs.</p>
         </div>
