Added language button

--- a/index.html
+++ b/index.html
@@ -7,7 +7,10 @@
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <button id="lang-toggle">🇬🇧</button>
+    <div class="lang-toggle-container">
+      <button id="btn-en" class="lang-btn" data-lang="en">🇬🇧</button>
+      <button id="btn-da" class="lang-btn" data-lang="da">🇩🇰</button>
+    </div>    
 
     <div id="content" data-aos="fade-down">
       <h1 data-i18n="name">Avalin</h1>
