--- a/index.html
+++ b/index.html
@@ -8,9 +8,14 @@
   </head>
   <body>
     <div class="lang-toggle-container">
-      <button id="btn-en" class="lang-btn" data-lang="en">🇬🇧</button>
-      <button id="btn-da" class="lang-btn" data-lang="da">🇩🇰</button>
-    </div>    
+      <button class="lang-btn" id="btn-en" data-lang="en">
+        <img src="images/flags/en.png" alt="English" />
+      </button>
+      <button class="lang-btn" id="btn-da" data-lang="da">
+        <img src="images/flags/da.png" alt="Danish" />
+      </button>
+    </div>
+    
 
     <div id="content" data-aos="fade-down">
       <h1 data-i18n="name">Avalin</h1>
