Added photo of me

--- a/index.html
+++ b/index.html
@@ -23,14 +23,23 @@
     </div>
 
     <section class="about" data-aos="fade-up">
-      <h2 data-i18n="about_title">About Me</h2>
-      <p data-i18n="about_text">
-        I'm Avalin — a creative technologist with a love for weird interfaces, logical problem-solving,
-        and immersive experiences. I’ve built everything from backend schedulers to WebVR worlds and
-        contributed to projects like LEGO Super Mario and AquaGlobe. When I’m not coding, I’m probably
-        admiring cats or designing something nobody asked for (but everyone will secretly love).
-      </p>
+      <div class="about-flex">
+        <div class="about-photo-wrapper">
+          <img src="images/me.jpg" alt="Avalin at her setup" class="about-photo" />
+        </div>
+        <div class="about-text">
+          <h2 data-i18n="about_title">About Me</h2>
+          <p data-i18n="about_text">
+            I'm Avalin — a creative technologist with a love for weird interfaces, logical problem-solving,
+            and immersive experiences. I’ve built everything from backend schedulers to WebVR worlds and
+            contributed to projects like LEGO Super Mario and AquaGlobe. When I’m not coding, I’m probably
+            admiring cats or designing something nobody asked for (but everyone will secretly love).
+          </p>
+        </div>
+      </div>
     </section>
+    
+    
 
     <section data-aos="fade-up">
       <h2 style="text-align:center;" data-i18n="projects_title">Featured Projects</h2>
