--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
       <h2 data-i18n="connect_title">Let's Connect</h2>
       <a href="https://github.com/Avalin" class="resume-btn" target="_blank" data-i18n="github">GitHub @Avalin</a>
       <a href="mailto:astridavalin@gmail.com" class="resume-btn" data-i18n="email">Email Me</a>
-      <a href="documents/CV.pdf" class="resume-btn" download data-i18n="resume">Download Resume</a>
+      <a href="documents/CV-2025-EN.pdf" class="resume-btn" download data-i18n="resume">Download Resume</a>
     </section>
 
     <footer>
