--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         <div class="project-card" onclick="window.open('https://www.amazon.com/gp/product/B08CNKKS9G', '_blank')" data-aos="zoom-in">
           <img src="images/projects/lego-super-mario.png" alt="LEGO Preview">
           <h3 data-i18n="project_lego_title">LEGO Super Mario App</h3>
-          <p data-i18n="project_lego_desc">Worked on C# backend and interactive logic for LEGO's Super Mario App.</p>
+          <p data-i18n="project_lego_desc">Worked in Unity C# for the interactive logic in LEGO's Super Mario App.</p>
         </div>
         <div class="project-card" onclick="window.open('https://smartplan.dk/', '_blank')" data-aos="zoom-in">
           <img src="images/projects/smartplan.png" alt="Smartplan Preview">
