--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
         <div class="project-card" data-aos="zoom-in">
           <img src="images/projects/pokemon.gif" alt="Pokemon VR Preview">
           <h3 data-i18n="project_pokemon_title">Pokémon VR</h3>
-          <p data-i18n="project_pokemon_desc">Catch Pokémon by throwing Pokéballs with gaze-based interaction. WebVR + A-Frame + JS.</p>
+          <p data-i18n="project_pokemon_desc">Catch Pokémon by throwing Pokéballs, and use gaze-based interaction with the Pokémon themselves. WebVR + A-Frame + JS.</p>
         </div>
         <div class="project-card" onclick="window.open('https://www.amazon.com/gp/product/B08CNKKS9G', '_blank')" data-aos="zoom-in">
           <img src="images/projects/lego-super-mario.png" alt="LEGO Preview">
