--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
           <h3 data-i18n="project_smartplan_title">Smartplan Backend</h3>
           <p data-i18n="project_smartplan_desc">Designed rostering logic with Drools Rule Engine & Java to solve NP-hard planning problems.</p>
         </div>
-        <div class="project-card" onclick="window.open('https://www.rytterpark.dk', '_blank')" data-aos="zoom-in">
+        <div class="project-card" onclick="window.open('https://www.rytterparken1987.dk', '_blank')" data-aos="zoom-in">
           <img src="images/projects/rytterpark.png" alt="Rytterpark Preview">
           <h3 data-i18n="project_rytterpark_title">Homeowners Association Website</h3>
           <p data-i18n="project_rytterpark_desc">Custom-built admin/editable site using JS, Bootstrap, JSON from Google Sheets.</p>
