--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 
     <section class="tech-stack" data-aos="fade-up">
       <h2 data-i18n="tech_title">Tech Stack</h2>
-      <p data-i18n="tech_list">C# · Unity · JavaScript · WebVR · A-Frame · Three.js · HTML/CSS · Drools · Git · VR APIs · Google Apps Script · Bootstrap</p>
+      <p data-i18n="tech_list">C# · .NET · Unity · JavaScript · WebVR · A-Frame · Three.js · HTML/CSS · Drools · Git · VR APIs · Google Apps Script · Bootstrap</p>
     </section>
 
     <section class="connect" data-aos="fade-up">
